# tic-tac-toe

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.h
src/: CMakeLists.txt  mainwindow.cpp
src/console/: CMakeLists.txt  input_output.cpp  input_output.h  main.cpp
src/core/: CMakeLists.txt  ai_core.cpp  ai_core.h  base_types.cpp  base_types.h  cmd_parser.cpp  cmd_parser.h  field.cpp  field.h  game.cpp  game.h  i_input_output.cpp  i_input_output.h  i_input_output.hpp  input_output.cpp  input_output.h  main.cpp  player.cpp  player.h
src/core/tests/: main.cpp
src/gui/: CMakeLists.txt  input_output.cpp  input_output.h  main.cpp  mainwindow.cpp  mainwindow.h
