set(LIB_T Tic-tac-toe-core)
file(GLOB project_sources CONFIGURE_DEPENDS "*.h" "*.hpp" "*.cpp")
source_group(src FILES ${project_sources})
add_library(${LIB_T} ${project_sources})
target_include_directories(${LIB_T} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

option(BUILD_UNIT_TESTS off)

if (${BUILD_UNIT_TESTS})
    set(APP_T Tic-tac-toe-core-tests)
    set(FOLDER_NAME "tests")
    file(GLOB tests_sources CONFIGURE_DEPENDS ${FOLDER_NAME}/*.h ${FOLDER_NAME}/*.cpp)
    source_group(src FILES ${tests_sources})
    add_library(${APP_T} ${tests_sources})
    target_link_libraries(${APP_T} ${LIB_T})
endif()
